--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ set -g default-command "reattach-to-user-namespace -l zsh"
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded"
 #Split windows
-bind | split-window -h
+bind = split-window -h
 bind - split-window -v
 # vi movement
 setw -g mode-keys vi
