--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 unbind C-b
-set -g prefix C-a
+set -g prefix C-]
 set -sg escape-time 1
 set -g base-index 1
 set -g pane-base-index 1
@@ -64,9 +64,6 @@ set-option -g repeat-time -0
 # set-option clock-mode-style 12
 setw -g monitor-activity on
 set -g visual-activity on
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
 set-option -g default-terminal screen-256color
 bind -n C-k run-shell 'tmux-vim-select-pane -U'
 bind -n C-j run-shell 'tmux-vim-select-pane -D'
