--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,7 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set -g status-keys vi
 set -g default-terminal "screen-256color"
-set -g default-command "reattach-to-user-namespace -l zsh"
+# set -g default-command "reattach-to-user-namespace -l zsh"
 # reload
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded"
@@ -70,3 +70,9 @@ bind -n C-j run-shell 'tmux-vim-select-pane -D'
 bind -n C-h run-shell 'tmux-vim-select-pane -L'
 bind -n C-l run-shell 'tmux-vim-select-pane -R'
 bind -n "C-\\" run-shell 'tmux-vim-select-pane -l'
+set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+run '~/.tmux/plugins/tpm/tpm'
